Bug 207862 - color settings: color buttons probes are too small (minor)
Summary: color settings: color buttons probes are too small (minor)
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Frameworks and Libraries
Component: kdeui (show other bugs)
Version: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-19 08:59 UTC by Maciej Pilichowski
Modified: 2009-09-28 05:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2009-09-19 08:59:32 UTC
Version:            (using KDE 4.3.0)
Installed from:    SuSE RPMs

Akregator has two color buttons (settings dialog) -- the probes of the colors are ~2 pixels in height. This is too little, compare it to systemsettings, the same color buttons, but colors in buttons are presented in readable way -- color (in each button) takes around 30% of button height.
Comment 1 Christoph Feck 2009-09-20 02:38:16 UTC
Akregator uses the correct default height. The bug is in kdelibs, misinterpreting the QStyle::PM_ButtonMargin value.

The height in systemsettings is increased just to work around this bug.
Comment 2 Christoph Feck 2009-09-28 05:09:33 UTC
SVN commit 1028742 by cfeck:

QStyle::PM_ButtonMargin is the total margin, not on each side

BUG: 207862


 M  +1 -1      kcolorbutton.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028742