QStyle::PM_ButtonMargin is the total margin, not on each side

BUG: 207862

svn path=/trunk/KDE/kdelibs/; revision=1028742